[tool.poetry]
name = "sikuquanshu"
version = "0.1.0"
description = ""
authors = ["theocheng <zlz_gty@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flet = "^0.5.2"
pyinstaller = "^5.10.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
